# NativeSocketDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/resource/proto/: SDKCommand.proto
app/src/androidTest/java/com/sinkinchan/nativesocketdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NativeSocket.cpp  NativeSocket.h  native-lib.cpp
app/src/main/cpp/include/log/: Log.h
app/src/main/cpp/include/proto/: SDKCommand.pb.cc  SDKCommand.pb.h
app/src/main/cpp/libs/google/protobuf/: any.pb.cc  any.pb.h  api.pb.cc  api.pb.h  arena.h  arenastring.cc  arenastring.h  config.h  descriptor.cc  descriptor.h  descriptor.pb.cc  descriptor.pb.h  descriptor_database.cc  descriptor_database.h  duration.pb.cc  duration.pb.h  dynamic_message.cc  dynamic_message.h  empty.pb.cc  empty.pb.h  extension_set_heavy.cc  field_mask.pb.cc  field_mask.pb.h  generated_message_reflection.cc  generated_message_reflection.h  generated_message_util.cc  generated_message_util.h  map.h  map_entry.h  map_entry_lite.h  map_field_lite.h  map_type_handler.h  message.cc  message.h  message_lite.cc  message_lite.h  metadata.h  reflection_ops.cc  repeated_field.h  source_context.pb.cc  (+15 more)
app/src/main/cpp/libs/google/protobuf/io/: coded_stream.cc  coded_stream.h
app/src/main/cpp/libs/google/protobuf/stubs/: atomicops.h  atomicops_internals_macosx.h  common.cc  common.h  hash.h  port.h  strutil.cc
app/src/main/cpp/libs/google/protobuf/util/: message_differencer.cc  message_differencer.h
app/src/main/cpp/libs/google/protobuf/util/internal/: default_value_objectwriter.cc  default_value_objectwriter.h  field_mask_utility.cc  json_escaping.cc  json_stream_parser.cc  protostream_objectsource.cc  protostream_objectsource.h  protostream_objectwriter.cc  type_info.cc  utility.cc
app/src/main/java/com/sinkinchan/nativesocketdemo/: MainActivity.java
app/src/main/java/com/sinkinchan/nativesocketdemo/callback/: CommandFactory.java
app/src/main/java/com/sinkinchan/nativesocketdemo/callback/base/: CommandCallback.java
app/src/main/java/com/sinkinchan/nativesocketdemo/jni/: Jni.java
app/src/main/java/com/sinkinchan/nativesocketdemo/proto/: SDKCommandProto.java
app/src/main/java/com/sinkinchan/nativesocketdemo/socket/: UdpHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sinkinchan/nativesocketdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
